--- a/index.html
+++ b/index.html
@@ -36,18 +36,18 @@
 								    <div class="swiper-slide">
 								    	<div class="slider_item ibg">
 								    		<img src="img/Luxtrader-Home-V5.jpg">
-								    		<a class="slider_item_link" href="#"></a>
+								    		<a class="slider_item_link" target="_blank" href="Luxtrader/Luxtrader.html"></a>
 								    	</div>
 								    </div>
 									<div class="swiper-slide">
 								    	<div class="slider_item ibg">
-								    		<img src="img/KhIMChISTKA_MEBELI_FFF.jpg"><a class="slider_item_link" href="http://project2369599.tilda.ws/"></a>
+								    		<img src="img/KhIMChISTKA_MEBELI_FFF.jpg"><a class="slider_item_link" target="_blank" href="http://project2369599.tilda.ws/"></a>
 								    	</div>
 								    </div>
 								    <div class="swiper-slide">
 								    	<div class="slider_item ibg">
 								    		<img src="img/YEBO_Bicycle_Theme.jpg">
-								    		<a class="slider_item_link" href="#"></a>
+								    		<a class="slider_item_link" target="_blank" href="velik/velik.html"></a>
 								    	</div>
 								    </div>
 							    </div>
