--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 							<div class="body_title"><span>твой</span><br>WEB-разработчик</div>
 							<div class="body_content_text">
 								<p class="content_text">Есть много вариантов Lorem Ipsum, но большинство из них имеет не всегда приемлемые модификации, например, юмористические вставки или слова, которые даже отдалённо не напоминают латынь. </p>
-								<a href="#" class="content_btn">Заказать</a>
+								<a href="https://vk.com/al_im.php?sel=183190254" target="_blank" class="content_btn">Заказать</a>
 							</div>
 						</div>
 					</div>
